--- a/config/storage.yml
+++ b/config/storage.yml
@@ -4,15 +4,15 @@ test:
 
 local:
   service: Disk
-  root: <%= Rails.root.join("storage") %>
+  root: <%= Rails.root.join("public/post_images") %>
 
 #Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-#amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: ap-northeast-1
-#   bucket: archipic-image
+amazon:
+   service: S3
+   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+   region: ap-northeast-1
+   bucket: archipic-image
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
